# cancer

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FRAMEWORK_ISSUES.md  PUBLISHING.md  README.md  deny.toml  dev.sh  llms.txt
.planning/: MILESTONES.md  PROJECT.md  STATE.md  (+1 more)
cancer-cache/: Cargo.toml
cancer-cache/src/: cache.rs  error.rs  lib.rs  tagged.rs
cancer-cache/src/stores/: memory.rs  redis.rs
cancer-mcp/: Cargo.toml
cancer-mcp/src/: error.rs  lib.rs  server.rs  service.rs
cancer-mcp/src/introspection/: events.rs  middleware.rs  models.rs  routes.rs
cancer-mcp/src/resources/: error_patterns.rs  glossary.rs  mod.rs
cancer-mcp/src/tools/: application_info.rs  code_templates.rs  create_project.rs  database_query.rs  database_schema.rs  dependency_graph.rs  diagnose_error.rs  explain_model.rs  explain_route.rs  generate_types.rs  generation_context.rs  get_config.rs  get_handler.rs  get_middleware.rs  inspect_props.rs  last_error.rs  list_commands.rs  list_events.rs  list_middleware.rs  list_migrations.rs  list_models.rs  list_routes.rs  list_services.rs  mod.rs  queue_status.rs  read_logs.rs  relation_map.rs  request_metrics.rs  search_docs.rs  session_inspect.rs  test_route.rs  validate_contracts.rs
cancer-queue/: Cargo.toml  README.md
cancer-queue/src/: config.rs  dispatcher.rs  error.rs  job.rs  lib.rs  queue.rs  worker.rs
ferro-broadcast/: Cargo.toml  README.md
ferro-broadcast/src/: broadcast.rs  broadcaster.rs  channel.rs  config.rs  lib.rs
ferro-cli/: Cargo.toml  README.md
ferro-cli/src/: analyzer.rs  main.rs
ferro-cli/src/commands/: boost_install.rs  claude_install.rs  db_query.rs  db_sync.rs  do_init.rs  docker_compose.rs  docker_init.rs  generate_routes.rs  generate_types.rs  make_action.rs  make_controller.rs  make_error.rs  make_event.rs  make_factory.rs  make_inertia.rs  make_job.rs  make_listener.rs  make_middleware.rs  make_migration.rs  make_notification.rs  make_policy.rs  make_scaffold.rs  make_seeder.rs  make_task.rs  mcp.rs  migrate.rs  migrate_fresh.rs  migrate_rollback.rs  migrate_status.rs  mod.rs  new.rs  serve.rs  validate_contracts.rs
ferro-cli/src/templates/: mod.rs
ferro-cli/src/templates/files/backend/: Cargo.toml.tpl  bootstrap.rs.tpl  main.rs.tpl  routes.rs.tpl  schedule.rs.tpl
ferro-cli/src/templates/files/backend/actions/: example_action.rs.tpl
ferro-cli/src/templates/files/do/: app.yaml.tpl
ferro-cli/src/templates/files/docker/: docker-compose.yml.tpl
ferro-cli/src/templates/files/frontend/: package.json.tpl  vite.config.ts.tpl
ferro-cli/src/templates/files/root/: env.example.tpl  env.tpl
ferro-events/: Cargo.toml  README.md
ferro-events/src/: dispatcher.rs  lib.rs  traits.rs
ferro-inertia/: Cargo.toml  README.md
ferro-inertia/src/: config.rs  lib.rs  request.rs  response.rs  shared.rs
ferro-macros/: Cargo.toml  README.md
ferro-macros/src/: cancer_test.rs  crate_path.rs  describe.rs  domain_error.rs  ferro_test.rs  handler.rs  inertia.rs  injectable.rs  lib.rs  model.rs  redirect.rs  request.rs  service.rs  test_macro.rs  utils.rs  validate.rs
ferro-mcp/: Cargo.toml  README.md
ferro-mcp/src/: error.rs  lib.rs  server.rs  service.rs
ferro-mcp/src/introspection/: jobs.rs  migrations.rs  mod.rs  models.rs  routes.rs
ferro-mcp/src/resources/: error_patterns.rs  glossary.rs  mod.rs
ferro-mcp/src/tools/: application_info.rs  browser_logs.rs  cache_inspect.rs  code_templates.rs  create_project.rs  database_query.rs  dependency_graph.rs  diagnose_error.rs  explain_model.rs  explain_route.rs  generate_types.rs  generation_context.rs  get_config.rs  get_handler.rs  get_middleware.rs  inspect_props.rs  job_history.rs  last_error.rs  list_commands.rs  list_events.rs  list_jobs.rs  list_middleware.rs  list_props.rs  list_routes.rs  list_services.rs  mod.rs  model_usages.rs  queue_status.rs  request_metrics.rs  route_dependencies.rs  search_docs.rs  session_inspect.rs  test_route.rs  tinker.rs  validate_contracts.rs
ferro-notifications/: Cargo.toml  README.md
ferro-notifications/src/: dispatcher.rs  lib.rs  notifiable.rs  notification.rs
ferro-notifications/src/channels/: slack.rs
framework/: Cargo.toml  README.md
framework/src/: app.rs  error.rs  lib.rs  server.rs
framework/src/auth/: authenticatable.rs  guard.rs  middleware.rs  mod.rs  provider.rs
framework/src/authorization/: authorizable.rs  error.rs  gate.rs  middleware.rs  mod.rs  policy.rs  response.rs
framework/src/cache/: config.rs  memory.rs  mod.rs  redis.rs  store.rs
framework/src/config/: env.rs  mod.rs
framework/src/config/providers/: app.rs
framework/src/container/: mod.rs  provider.rs  testing.rs
framework/src/csrf/: middleware.rs  mod.rs
framework/src/database/: config.rs  connection.rs  eager_loading.rs  mod.rs  model.rs  query_builder.rs  route_binding.rs  testing.rs  transaction.rs
framework/src/debug/: mod.rs
framework/src/hashing/: mod.rs
framework/src/http/: cookie.rs  extract.rs  form_request.rs  mod.rs  request.rs  response.rs
framework/src/inertia/: config.rs  context.rs  mod.rs  response.rs
framework/src/metrics/: mod.rs
framework/src/middleware/: chain.rs  metrics.rs  mod.rs  rate_limit.rs  registry.rs
framework/src/routing/: group.rs  macros.rs  mod.rs  router.rs
framework/src/schedule/: builder.rs  expression.rs  mod.rs  task.rs
framework/src/seeder/: mod.rs
framework/src/session/: config.rs  middleware.rs  mod.rs  store.rs
framework/src/session/driver/: database.rs  mod.rs
framework/src/testing/: expect.rs  factory.rs  http.rs  mod.rs
framework/src/validation/: error.rs  mod.rs  rule.rs  rules.rs  validatable.rs  validator.rs
framework/tests/: validation_derive.rs
inertia-rs/: Cargo.toml
inertia-rs/src/: config.rs  lib.rs  request.rs  response.rs
kit-events/: Cargo.toml
kit-events/src/: dispatcher.rs  lib.rs  traits.rs
kit-notifications/: Cargo.toml
kit-notifications/src/: error.rs  lib.rs  notifiable.rs  notification.rs
kit-storage/: Cargo.toml
kit-storage/src/: facade.rs  lib.rs  storage.rs
kit-storage/src/drivers/: local.rs  memory.rs  mod.rs
(+402 files in other folders)
