[workspace]
resolver = "2"
members = [
    "framework",
    "app",
    "cancer-cli",
    "cancer-macros",
    "cancer-events",
    "cancer-queue",
    "cancer-notifications",
    "cancer-broadcast",
    "cancer-storage",
    "cancer-cache",
    "cancer-mcp",
    "inertia-rs",
]

[workspace.package]
version = "0.1.67"
edition = "2021"
license = "MIT"
