[workspace]
resolver = "2"
members = [
    "framework",
    "app",
    "ferro-cli",
    "ferro-macros",
    "ferro-events",
    "ferro-queue",
    "ferro-notifications",
    "ferro-broadcast",
    "ferro-storage",
    "ferro-cache",
    "ferro-mcp",
    "ferro-inertia",
]

[workspace.package]
version = "0.1.69"
edition = "2021"
rust-version = "1.88.0"
license = "MIT"
