[package]
name = "cancer-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Caching with tags for the Cancer framework"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }
moka = { version = "0.12", features = ["future"], optional = true }
dashmap = "6"

[features]
default = ["memory"]
memory = ["moka"]
redis-backend = ["redis"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
