[package]
name = "cancer-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) server for AI-assisted Cancer Framework development"

[dependencies]
rmcp = { version = "0.12", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
syn = { version = "2", features = ["full", "parsing", "visit"] }
quote = "1"
walkdir = "2"
regex = "1"
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls"] }
dotenvy = "0.15"
toml = "0.8"
thiserror = "2"
anyhow = "1"
chrono = "0.4"
tracing = "0.1"
