[package]
name = "ferro-broadcast"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket broadcasting and real-time channels for Ferro framework"
repository = "https://github.com/albertogferrario/cancer"
keywords = ["websocket", "broadcast", "channels", "realtime", "ferro"]
categories = ["web-programming", "asynchronous"]

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
