[package]
name = "ferro-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for scaffolding Ferro web applications"
repository = "https://github.com/albertogferrario/ferro"
homepage = "https://github.com/albertogferrario/ferro"
keywords = ["cli", "scaffold", "ferro", "web", "generator"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "ferro"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
ctrlc = "3.5"
syn = { version = "2", features = ["full", "parsing", "visit"] }
walkdir = "2"
notify = "6"
notify-debouncer-mini = "0.4"
dirs = "5"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
sea-orm-migration = { version = "1.0", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls"] }
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-native-tls"] }
chrono = "0.4"
toml = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ferro-mcp = { path = "../ferro-mcp", version = "0.1" }

[dev-dependencies]
tempfile = "3.24.0"
