[package]
name = "ferro-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for Ferro framework"
repository = "https://github.com/ferroframework/ferro"
keywords = ["macros", "proc-macro", "ferro", "web", "derive"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
serde = { version = "1", features = ["derive"] }
serde_derive_internals = "0.29"
regex = "1"
proc-macro-crate = "3"
