[package]
name = "ferro-notifications"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-channel notification system for Ferro framework"
repository = "https://github.com/ferroframework/ferro"
keywords = ["notifications", "mail", "slack", "ferro", "web"]
categories = ["web-programming", "asynchronous"]
readme = "README.md"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt"] }
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
