[package]
name = "ferro"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A Laravel-inspired web framework for Rust"
repository = "https://github.com/albertogferrario/cancer"
homepage = "https://github.com/albertogferrario/cancer"
keywords = ["web", "framework", "async", "http", "server"]
categories = ["web-programming::http-server", "asynchronous"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1"
matchit = "0.8"
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cancer-macros = { path = "../ferro-macros", package = "ferro-macros", version = "0.1" }
cancer-events = { path = "../ferro-events", package = "ferro-events", version = "0.1" }
cancer-queue = { path = "../ferro-queue", package = "ferro-queue", version = "0.1" }
cancer-notifications = { path = "../ferro-notifications", package = "ferro-notifications", version = "0.1" }
cancer-broadcast = { path = "../ferro-broadcast", package = "ferro-broadcast", version = "0.1" }
cancer-storage = { path = "../ferro-storage", package = "ferro-storage", version = "0.1" }
cancer-cache = { path = "../ferro-cache", package = "ferro-cache", version = "0.1" }
inertia-rs = { path = "../inertia-rs", version = "0.1" }
dotenvy = "0.15"
inventory = "0.3"
sea-orm = { version = "1.0", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "1.0"
thiserror = "1.0"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
validator = { version = "0.18", features = ["derive"] }
serde_urlencoded = "0.7"
form_urlencoded = "1"
pretty_assertions = "1.4"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
rand = "0.8"
base64 = "0.22"
dashmap = "6"
clap = { version = "4", features = ["derive"] }
regex = "1"
