[package]
name = "inertia-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Server-side Inertia.js adapter for Rust web frameworks"
repository = "https://github.com/inertiajs/inertia-rs"
documentation = "https://docs.rs/inertia-rs"
readme = "README.md"
keywords = ["inertia", "inertiajs", "spa", "react", "vue"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
