[package]
name = "kit-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "File storage abstraction for the Kit framework"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["fs", "io-util"] }
tracing = "0.1"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
mime_guess = "2"
dashmap = "6"
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

[features]
default = []
s3 = ["aws-sdk-s3", "aws-config"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
